<resources>
    <string name="app_name">Todo_List_Room</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_task">Add Task</string>
    <string name="enter_priority">Enter Priority</string>
    <string name="update_task">Update Task</string>
</resources>