<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.jones.todo_list_room.ui.viewModels.BaseTaskViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        tools:context=".ui.fragments.AddTaskFragment">

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/etPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:inputType="number"
            android:padding="10dp"
            android:maxLines="1"
            android:hint="@string/enter_priority"
            android:layout_marginBottom="80dp"
            android:text="@={viewModel.priority}"
            />


        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:padding="10dp"
            android:maxLines="2"
            android:text="@={viewModel.title}"
            />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_description"
            android:lines="10"
            android:inputType="textMultiLine"
            android:maxLength="1000"
            android:gravity="top|start"
            android:padding="10dp"
            android:text="@={viewModel.desc}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSubmit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:text="@string/add"
                android:backgroundTint="@color/blue"
                />

        </LinearLayout>

    </LinearLayout>
</layout>